<resources>
    <string name="app_name">taskUp</string>
    <string name="slogan">PLAN YOUR PROGRESS</string>
    <string name="username">Username</string>
    <string name="select_password">Select password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="already_have_account_txt">Already have an account? <b>Sign In</b> </string>
    <string name="erase_all_data">Erase all data</string>
    <string name="dont_have_an_account_txt">Don\'t have an account? <b>Sign Up</b> </string>
    <string name="canva_logo">Canva Logo</string>
    <string name="or_txt">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="user_icon">User Icon</string>
    <string name="remember_me">Remember me</string>
    <string name="we_are_glad_to_see_you_back">We are glad to see you back</string>
    <string name="hello_user">Hello, User!</string>
    <string name="default_user_icon">default user icon</string>
    <string name="see_details">See details</string>
    <string name="create_new_quote">Create new quote</string>
    <string name="menu_dots">menu dots</string>
    <string name="change_user_icon">change user icon</string>
    <string name="back_icon">back button</string>
    <string name="name">Name</string>
    <string name="update_profile">Update profile</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="log_out">Log out</string>
    <string name="log_out_icon">log out icon</string>
    <string name="change_password">Change password</string>
    <string name="settings_icon">settings icon</string>
    <string name="edit_name_icon">edit name icon</string>
    <string name="next_icon">next icon</string>
    <string name="task_description">Description</string>
    <string name="task_name">Name</string>
    <string name="date_dd_mm_yyyy">Due date (dd/mm/yyyy)</string>
    <string name="no_quote_txt">Create your first task in order to be productive!</string>
    <string name="my_tasks">My tasks</string>
</resources>