<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/profileScreen_image_defaultUserIcon"
        android:layout_width="218dp"
        android:layout_height="217dp"
        android:contentDescription="@string/default_user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/ic_default_boy" />

    <EditText
        android:id="@+id/profileScreen_editTextText_changeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/name"
        android:paddingStart="50dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileScreen_image_changeIcon" />

    <Button
        android:id="@+id/profileScreen_button_updateProfile"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_light_gray_gradient"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/update_profile"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <Button
        android:id="@+id/profileScreen_button_logOut"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_red"
        android:fontFamily="@font/montserrat_regular"
        android:paddingStart="60dp"
        android:paddingEnd="45dp"
        android:text="@string/log_out"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <ImageView
        android:id="@+id/profileScreen_image_changeIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/change_user_icon"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_image_defaultUserIcon"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_image_defaultUserIcon"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_image_defaultUserIcon"
        app:srcCompat="@drawable/ic_upload" />


    <ImageView
        android:id="@+id/profileScreen_userIcon"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/profileScreen_logOutIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/log_out_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_button_logOut"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_button_logOut"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_button_logOut"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_button_logOut"
        app:srcCompat="@drawable/ic_log_out" />

    <ImageView
        android:id="@+id/profileScreen_backIcon"
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:contentDescription="@string/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/profileScreen_image_editIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/edit_name_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>