<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gray_gradient"
    tools:context=".welcomeScreen">

    <View
        android:id="@+id/welcomeScreen_view_whiteBackground"
        android:layout_width="413dp"
        android:layout_height="359dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/white_rounded_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeScreen_txt_slogan" />

    <ImageView
        android:id="@+id/welcomeScreen_image_canvaLogo"
        android:layout_width="443dp"
        android:layout_height="430dp"
        android:contentDescription="@string/canva_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/canva_logo_image" />

    <TextView
        android:id="@+id/welcomeScreen_txt_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="58sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/welcomeScreen_txt_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/slogan"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/welcomeScreen_btn_createAccount"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_light_gray_gradient"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/create_account"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeScreen_btn_login"
        app:layout_constraintVertical_bias="0.434" />

    <Button
        android:id="@+id/welcomeScreen_btn_login"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_dark_gray_gradient"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/login"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeScreen_view_whiteBackground"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/welcomeScreen_txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/or_txt"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeScreen_btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>