<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/profileScreen_image_defaultUserIcon"
        android:layout_width="201dp"
        android:layout_height="167dp"
        android:contentDescription="@string/default_user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/ic_default_boy" />

    <ImageView
        android:id="@+id/profileScreen_image_changeIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/change_user_icon"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_image_defaultUserIcon"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_image_defaultUserIcon"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_image_defaultUserIcon"
        app:srcCompat="@drawable/ic_upload" />

    <EditText
        android:id="@+id/profileScreen_editTextText_changeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/profileScreen_editTextText_changeUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileScreen_image_changeIcon" />

    <ImageView
        android:id="@+id/profileScreen_lockIcon"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_editTextTextPassword_currentPassword"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_editTextTextPassword_currentPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_editTextTextPassword_currentPassword"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_editTextTextPassword_currentPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock" />

    <EditText
        android:id="@+id/profileScreen_editTextTextPassword_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/profileScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/profileScreen_editTextTextPassword_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/profileScreen_button_updateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/profileScreen_editTextText_changeUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/profileScreen_editTextTextPassword_currentPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profileScreen_userIcon"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_editTextText_changeName"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/profileScreen_userIcon2"
        android:layout_width="26dp"
        android:layout_height="29dp"
        android:contentDescription="@string/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_editTextText_changeUsername"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_editTextText_changeUsername"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_editTextText_changeUsername"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_editTextText_changeUsername"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/profileScreen_lockIcon2"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_editTextTextPassword_newPassword"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_editTextTextPassword_newPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_editTextTextPassword_newPassword"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_editTextTextPassword_newPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/profileScreen_lockIcon3"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock" />

    <EditText
        android:id="@+id/profileScreen_editTextTextPassword_currentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/profileScreen_editTextTextPassword_newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profileScreen_button_updateProfile"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_light_gray_gradient"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/update_profile"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <Button
        android:id="@+id/profileScreen_button_logOut"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_light_gray_gradient"
        android:fontFamily="@font/montserrat_regular"
        android:paddingStart="20dp"
        android:paddingEnd="45dp"
        android:text="@string/log_out"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <ImageView
        android:id="@+id/profileScreen_logOutIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/log_out_icon"
        app:layout_constraintBottom_toBottomOf="@+id/profileScreen_button_logOut"
        app:layout_constraintEnd_toEndOf="@+id/profileScreen_button_logOut"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="@+id/profileScreen_button_logOut"
        app:layout_constraintTop_toTopOf="@+id/profileScreen_button_logOut"
        app:srcCompat="@drawable/ic_log_out" />

    <ImageView
        android:id="@+id/profileScreen_backIcon"
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:contentDescription="@string/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>