<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/profileScreen_backIcon"
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:contentDescription="@string/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/ic_back" />

    <ImageView
        android:id="@+id/changePasswordScreen_lockIcon4"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/changePasswordScreen_editTextTextPassword_currentPassword"
        app:layout_constraintEnd_toEndOf="@+id/changePasswordScreen_editTextTextPassword_currentPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/changePasswordScreen_editTextTextPassword_currentPassword"
        app:layout_constraintTop_toTopOf="@+id/changePasswordScreen_editTextTextPassword_currentPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/changePasswordScreen_lockIcon5"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/changePasswordScreen_editTextTextPassword_newPassword"
        app:layout_constraintEnd_toEndOf="@+id/changePasswordScreen_editTextTextPassword_newPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/changePasswordScreen_editTextTextPassword_newPassword"
        app:layout_constraintTop_toTopOf="@+id/changePasswordScreen_editTextTextPassword_newPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/changePasswordScreen_lockIcon6"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:contentDescription="@string/lock_icon"
        app:layout_constraintBottom_toBottomOf="@+id/changePasswordScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/changePasswordScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/changePasswordScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintTop_toTopOf="@+id/changePasswordScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_lock" />

    <EditText
        android:id="@+id/changePasswordScreen_editTextTextPassword_currentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordScreen_editTextTextPassword_newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/changePasswordScreen_editTextTextPassword_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordScreen_editTextTextPassword_confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/changePasswordScreen_editTextTextPassword_confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray"
        android:ems="15"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordScreen_button_updateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changePasswordScreen_button_updateProfile"
        android:layout_width="308dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_light_gray_gradient"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/change_password"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

</androidx.constraintlayout.widget.ConstraintLayout>